# College-Notes

./: CMakeLists.txt  mathjax.html
ANTHC101/: Anthro Test Notes.md  CMakeLists.txt  test.md
CS127/: CMakeLists.txt  csci_opertunities.md
CS150/: 2018-01-30 Introduction.md  CMakeLists.txt
MATH150/: 2017-08-25 Class 01.md  2017-09-26 Class 08.md  2017-10-03 Class 09.md  2017-10-10 Class 10.md  CMakeLists.txt
STAT213/: 2017-09-18 Class 07.md  2017-09-25 Class 08.md  2017-09-27 Class 09.md  2017-10-04 Class 11.md  2017-10-11 Class 12.md  2017-10-18 Class 14.md  2017-10-23 Class 15.md  2017-10-30 Class 17.md  2017-11-01 Class 18.md  2017-11-06 Class 19.md  2017-11-13 Class 20.md  CMakeLists.txt
